--- a/src/static/theme/light.css
+++ b/src/static/theme/light.css
@@ -77,5 +77,5 @@
     background: #FAFAFA !important;
 }
 
-#titlebar::-moz-selection { background: yellow; }
-#titlebar::selection { background: yellow; }
+#titlebar::-moz-selection { background: #fcc41d; }
+#titlebar::selection { background: #fcc41d; }
